--- a/packages/fetch/package.json
+++ b/packages/fetch/package.json
@@ -8,8 +8,8 @@
     "types": "dist",
     "scripts": {
         "test": "ts-node tests/index.ts",
-        "eslint":"eslint",
-        "eslint:fix":"eslint --fix",
+        "eslint": "eslint",
+        "eslint:fix": "eslint --fix",
         "build": "tsc",
         "build:test": "tsc --noEmit",
         "run:node": "node .",
@@ -19,5 +19,11 @@
         "type": "git",
         "url": "https://github.com/Infinite-Fansub/infinite.git"
     },
-    "homepage": "https://github.com/Infinite-Fansub/infinite/tree/main/packages/fetch"
+    "homepage": "https://github.com/Infinite-Fansub/infinite/tree/main/packages/fetch",
+    "dependencies": {
+        "node-expat": "^2.4.0"
+    },
+    "devDependencies": {
+        "@types/node-expat": "^2.3.2"
+    }
 }
