--- a/packages/fetch/package.json
+++ b/packages/fetch/package.json
@@ -12,8 +12,8 @@
         "eslint:fix": "eslint --fix",
         "build": "tsc",
         "build:test": "tsc --noEmit",
-        "run:node": "node .",
-        "run:ts": "ts-node src/index.ts"
+        "node": "node .",
+        "tsn": "ts-node src/index.ts"
     },
     "repository": {
         "type": "git",
