--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -97,7 +97,6 @@
         "@typescript-eslint/no-confusing-non-null-assertion": "error",
         "@typescript-eslint/no-confusing-void-expression": "error",
         "@typescript-eslint/explicit-member-accessibility": "warn",
-        "@typescript-eslint/member-delimiter-style": "warn",
         "@typescript-eslint/method-signature-style": "error",
         "@typescript-eslint/await-thenable": "error",
         "@typescript-eslint/ban-ts-comment": "warn",
@@ -127,6 +126,20 @@
         //         "allowSingleLineBlocks": true
         //     }
         // ],
+        "@typescript-eslint/member-delimiter-style": [
+            "warn",
+            {
+                "multiline": {
+                    "delimiter": "comma",
+                    "requireLast": false
+                },
+                "singleline": {
+                    "delimiter": "comma",
+                    "requireLast": false
+                },
+                "multilineDetection": "brackets"
+            }
+        ],
         "@typescript-eslint/brace-style": [
             "warn",
             "1tbs",
