--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,123 +3,122 @@
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": "latest",
-        "project": [
-            "./tsconfig.json"
-        ]
+        "project": "./tsconfig.json"
     },
     "plugins": [
-        "@typescript-eslint/eslint-plugin"
+        "@typescript-eslint/eslint-plugin",
+        "eslint-plugin-tsdoc"
     ],
     "rules": {
-        "no-unneeded-ternary": "error",
-        "prefer-template": "error",
+        "no-tabs": "error",
+        "no-mixed-spaces-and-tabs": "error",
+        "tsdoc/syntax": "warn",
+        "no-unneeded-ternary": "warn",
+        "prefer-template": "warn",
         "arrow-parens": "warn",
         "arrow-spacing": "warn",
-        "block-spacing": "error",
+        "block-spacing": "warn",
         "space-in-parens": "warn",
         "switch-colon-spacing": "warn",
         "template-curly-spacing": "warn",
         "comma-style": "warn",
-        "computed-property-spacing": "error",
-        "implicit-arrow-linebreak": "error",
-        "jsx-quotes": "error",
-        "key-spacing": "error",
+        "computed-property-spacing": "warn",
+        "implicit-arrow-linebreak": "warn",
+        "jsx-quotes": "warn",
+        "key-spacing": "warn",
         "linebreak-style": "warn",
         "lines-around-comment": "warn",
-        "no-mixed-spaces-and-tabs": "error",
-        "new-parens": "error",
-        "no-multi-spaces": "error",
-        "no-tabs": "error",
-        "no-trailing-spaces": "error",
+        "new-parens": "warn",
+        "no-multi-spaces": "warn",
+        "no-trailing-spaces": "warn",
         "no-whitespace-before-property": "warn",
-        "rest-spread-spacing": "error",
-        "semi-spacing": "error",
-        "semi-style": "error",
+        "rest-spread-spacing": "warn",
+        "semi-spacing": "warn",
+        "semi-style": "warn",
         "wrap-regex": "warn",
         // "@typescript-eslint/no-redeclare": "error",
         // "@typescript-eslint/no-magic-numbers": "warn",
-        "@typescript-eslint/init-declarations": "warn",
-        "@typescript-eslint/space-infix-ops": "warn",
-        "@typescript-eslint/no-extra-non-null-assertion": "error",
-        "@typescript-eslint/no-explicit-any": "error",
+        "@typescript-eslint/init-declarations": "error",
         "@typescript-eslint/no-extraneous-class": "error",
         "@typescript-eslint/no-for-in-array": "error",
         "@typescript-eslint/no-invalid-this": "error",
         "@typescript-eslint/no-loop-func": "error",
-        "@typescript-eslint/no-loss-of-precision": "warn",
+        "@typescript-eslint/no-loss-of-precision": "error",
         "@typescript-eslint/no-restricted-imports": "error",
         "@typescript-eslint/no-shadow": "error",
         "@typescript-eslint/no-throw-literal": "error",
-        "@typescript-eslint/no-unused-vars": "warn",
-        "@typescript-eslint/no-meaningless-void-operator": "error",
+        "@typescript-eslint/no-unused-vars": "error",
         "@typescript-eslint/no-misused-new": "error",
         "@typescript-eslint/no-misused-promises": "error",
-        "@typescript-eslint/no-namespace": "warn",
+        "@typescript-eslint/no-namespace": "error",
         "@typescript-eslint/no-non-null-asserted-nullish-coalescing": "error",
         "@typescript-eslint/no-redundant-type-constituents": "error",
         "@typescript-eslint/no-require-imports": "error",
         "@typescript-eslint/no-this-alias": "error",
+        "@typescript-eslint/no-unsafe-argument": "error",
+        "@typescript-eslint/no-unsafe-call": "error",
+        "@typescript-eslint/no-unsafe-member-access": "error",
+        "@typescript-eslint/no-unsafe-return": "error",
+        "@typescript-eslint/no-useless-constructor": "error",
+        "@typescript-eslint/no-use-before-define": "error",
+        "@typescript-eslint/no-var-requires": "error",
+        "@typescript-eslint/prefer-for-of": "error",
+        "@typescript-eslint/prefer-literal-enum-member": "error",
+        "@typescript-eslint/prefer-nullish-coalescing": "error",
+        "@typescript-eslint/prefer-optional-chain": "error",
+        "@typescript-eslint/require-await": "error",
+        "@typescript-eslint/switch-exhaustiveness-check": "error",
+        "@typescript-eslint/triple-slash-reference": "error",
+        "@typescript-eslint/unbound-method": "error",
+        "@typescript-eslint/unified-signatures": "error",
+        "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
+        "@typescript-eslint/no-non-null-assertion": "error",
+        "@typescript-eslint/no-base-to-string": "error",
+        "@typescript-eslint/await-thenable": "error",
+        "@typescript-eslint/ban-ts-comment": "error",
+        "@typescript-eslint/default-param-last": "error",
+        "@typescript-eslint/adjacent-overload-signatures": "error",
+        "@typescript-eslint/no-dupe-class-members": "error",
+        "@typescript-eslint/no-duplicate-imports": "error",
+        "@typescript-eslint/no-unused-expressions": "error",
+        "@typescript-eslint/no-implied-eval": "error",
+        "@typescript-eslint/no-explicit-any": "warn",
+        "@typescript-eslint/space-infix-ops": "warn",
+        "@typescript-eslint/no-meaningless-void-operator": "warn",
+        "@typescript-eslint/no-extra-non-null-assertion": "warn",
         "@typescript-eslint/no-unnecessary-boolean-literal-compare": "warn",
         "@typescript-eslint/no-unnecessary-condition": "warn",
         "@typescript-eslint/no-unnecessary-qualifier": "warn",
         "@typescript-eslint/no-unnecessary-type-arguments": "warn",
         "@typescript-eslint/no-unnecessary-type-assertion": "warn",
         "@typescript-eslint/no-unnecessary-type-constraint": "warn",
-        "@typescript-eslint/no-unsafe-argument": "error",
-        "@typescript-eslint/no-unsafe-call": "error",
-        "@typescript-eslint/no-unsafe-member-access": "error",
-        "@typescript-eslint/no-unsafe-return": "error",
-        "@typescript-eslint/no-useless-empty-export": "error",
-        "@typescript-eslint/no-useless-constructor": "error",
-        "@typescript-eslint/no-use-before-define": "error",
-        "@typescript-eslint/no-var-requires": "error",
-        "@typescript-eslint/prefer-for-of": "warn",
-        "@typescript-eslint/prefer-function-type": "error",
-        "@typescript-eslint/prefer-includes": "error",
-        "@typescript-eslint/prefer-literal-enum-member": "warn",
+        "@typescript-eslint/no-useless-empty-export": "warn",
+        "@typescript-eslint/prefer-function-type": "warn",
+        "@typescript-eslint/prefer-includes": "warn",
         "@typescript-eslint/prefer-namespace-keyword": "warn",
-        "@typescript-eslint/prefer-nullish-coalescing": "error",
-        "@typescript-eslint/prefer-optional-chain": "error",
         "@typescript-eslint/prefer-reduce-type-parameter": "warn",
-        "@typescript-eslint/prefer-regexp-exec": "error",
-        "@typescript-eslint/prefer-string-starts-ends-with": "error",
-        "@typescript-eslint/prefer-ts-expect-error": "error",
-        "@typescript-eslint/promise-function-async": "error",
-        "@typescript-eslint/require-await": "error",
-        "@typescript-eslint/switch-exhaustiveness-check": "error",
-        "@typescript-eslint/triple-slash-reference": "error",
+        "@typescript-eslint/prefer-regexp-exec": "warn",
+        "@typescript-eslint/prefer-string-starts-ends-with": "warn",
+        "@typescript-eslint/prefer-ts-expect-error": "warn",
+        "@typescript-eslint/promise-function-async": "warn",
         "@typescript-eslint/type-annotation-spacing": "warn",
-        "@typescript-eslint/unbound-method": "error",
-        "@typescript-eslint/unified-signatures": "error",
-        "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
-        "@typescript-eslint/no-non-null-assertion": "warn",
-        "@typescript-eslint/no-base-to-string": "warn",
-        "@typescript-eslint/no-confusing-non-null-assertion": "error",
-        "@typescript-eslint/no-confusing-void-expression": "error",
+        "@typescript-eslint/no-confusing-non-null-assertion": "warn",
+        "@typescript-eslint/no-confusing-void-expression": "warn",
         "@typescript-eslint/explicit-member-accessibility": "warn",
-        "@typescript-eslint/method-signature-style": "error",
-        "@typescript-eslint/await-thenable": "error",
-        "@typescript-eslint/ban-ts-comment": "warn",
-        "@typescript-eslint/ban-types": "error",
-        "@typescript-eslint/consistent-indexed-object-style": "error",
-        "@typescript-eslint/func-call-spacing": "error",
-        "@typescript-eslint/adjacent-overload-signatures": "error",
-        "@typescript-eslint/comma-dangle": "error",
-        "@typescript-eslint/default-param-last": "error",
-        "@typescript-eslint/dot-notation": "error",
-        "@typescript-eslint/no-array-constructor": "error",
-        "@typescript-eslint/no-dupe-class-members": "error",
-        "@typescript-eslint/no-duplicate-imports": "error",
-        "@typescript-eslint/no-unused-expressions": "warn",
+        "@typescript-eslint/method-signature-style": "warn",
+        "@typescript-eslint/ban-types": "warn",
+        "@typescript-eslint/consistent-indexed-object-style": "warn",
+        "@typescript-eslint/func-call-spacing": "warn",
+        "@typescript-eslint/comma-dangle": "warn",
+        "@typescript-eslint/dot-notation": "warn",
+        "@typescript-eslint/no-array-constructor": "warn",
         "@typescript-eslint/comma-spacing": "warn",
-        "@typescript-eslint/no-extra-parens": "error",
-        "@typescript-eslint/no-extra-semi": "error",
-        "@typescript-eslint/no-implied-eval": "error",
+        "@typescript-eslint/no-extra-parens": "warn",
+        "@typescript-eslint/no-extra-semi": "warn",
         "@typescript-eslint/padding-line-between-statements": "warn",
-        "@typescript-eslint/semi": "error",
+        "@typescript-eslint/semi": "warn",
         "@typescript-eslint/space-before-blocks": "warn",
-        "padded-blocks": "off",
-        // [
+        // "padded-blocks": [
         //     "warn",
         //     "never",
         //     {
@@ -148,7 +147,7 @@
             }
         ],
         "array-bracket-newline": [
-            "error",
+            "warn",
             "never"
         ],
         "array-bracket-spacing": [
@@ -159,31 +158,27 @@
             }
         ],
         "array-element-newline": [
-            "error",
-            "never"
-        ],
-        "dot-location": [
-            "error",
-            "property"
-        ],
-        "eol-last": [
             "warn",
             "never"
         ],
+        "dot-location": [
+            "warn",
+            "property"
+        ],
         "function-call-argument-newline": [
-            "error",
+            "warn",
             "consistent"
         ],
         "function-paren-newline": [
-            "error",
+            "warn",
             "never"
         ],
         "generator-star-spacing": [
-            "error",
+            "warn",
             "after"
         ],
         "indent": [
-            "error",
+            "warn",
             4,
             {
                 "SwitchCase": 1
@@ -200,20 +195,20 @@
             }
         ],
         "@typescript-eslint/lines-between-class-members": [
-            "error",
+            "warn",
             "always",
             {
                 "exceptAfterSingleLine": true
             }
         ],
         "max-len": [
-            "warn",
+            "error",
             {
                 "code": 210
             }
         ],
         "max-statements-per-line": [
-            "warn",
+            "error",
             {
                 "max": 2
             }
@@ -235,7 +230,7 @@
             }
         ],
         "nonblock-statement-body-position": [
-            "error",
+            "warn",
             "beside",
             {
                 "overrides": {
@@ -245,17 +240,17 @@
             }
         ],
         "object-curly-newline": [
-            "error",
+            "warn",
             {
                 "multiline": true
             }
         ],
         "@typescript-eslint/object-curly-spacing": [
-            "error",
+            "warn",
             "always"
         ],
         "object-property-newline": [
-            "error",
+            "warn",
             {
                 "allowAllPropertiesOnSameLine": true
             }
@@ -265,14 +260,14 @@
             "none"
         ],
         "@typescript-eslint/quotes": [
-            "error",
+            "warn",
             "double",
             {
                 "avoidEscape": true
             }
         ],
         "@typescript-eslint/space-before-function-paren": [
-            "error",
+            "warn",
             {
                 "anonymous": "always",
                 "named": "never",
@@ -280,7 +275,7 @@
             }
         ],
         "space-unary-ops": [
-            "error",
+            "warn",
             {
                 "words": true,
                 "nonwords": false
@@ -291,15 +286,15 @@
             "always"
         ],
         "wrap-iife": [
-            "error",
+            "warn",
             "any"
         ],
         "yield-star-spacing": [
-            "error",
+            "warn",
             "after"
         ],
         "@typescript-eslint/array-type": [
-            "error",
+            "warn",
             {
                 "default": "generic"
             }
@@ -318,7 +313,7 @@
             }
         ],
         "@typescript-eslint/explicit-function-return-type": [
-            "warn",
+            "error",
             {
                 "allowExpressions": true
             }
@@ -364,7 +359,7 @@
             }
         ],
         "@typescript-eslint/no-empty-interface": [
-            "error",
+            "warn",
             {
                 "allowSingleExtends": true
             }
@@ -387,13 +382,13 @@
             }
         ],
         "@typescript-eslint/prefer-readonly": [
-            "error",
+            "warn",
             {
                 "onlyInlineLambdas": true
             }
         ],
         "@typescript-eslint/require-array-sort-compare": [
-            "warn",
+            "error",
             {
                 "ignoreStringArrays": true
             }
@@ -414,7 +409,7 @@
             }
         ],
         "@typescript-eslint/strict-boolean-expressions": [
-            "error",
+            "warn",
             {
                 "allowAny": true
             }
