--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,8 @@
 {
-    "ignorePatterns": "*.json",
+    "ignorePatterns": [
+        "*.json",
+        "*.graphql"
+    ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": "latest",
@@ -49,15 +52,14 @@
         "@typescript-eslint/no-throw-literal": "error",
         "@typescript-eslint/no-unused-vars": "error",
         "@typescript-eslint/no-misused-new": "error",
-        "@typescript-eslint/no-misused-promises": "error",
         "@typescript-eslint/no-namespace": "error",
         "@typescript-eslint/no-non-null-asserted-nullish-coalescing": "error",
         "@typescript-eslint/no-redundant-type-constituents": "error",
         "@typescript-eslint/no-require-imports": "error",
         "@typescript-eslint/no-this-alias": "error",
         "@typescript-eslint/no-unsafe-argument": "error",
-        "@typescript-eslint/no-unsafe-call": "error",
-        "@typescript-eslint/no-unsafe-member-access": "error",
+        // "@typescript-eslint/no-unsafe-call": "error",
+        // "@typescript-eslint/no-unsafe-member-access": "error",
         "@typescript-eslint/no-unsafe-return": "error",
         "@typescript-eslint/no-useless-constructor": "error",
         "@typescript-eslint/no-use-before-define": "error",
@@ -69,7 +71,6 @@
         "@typescript-eslint/require-await": "error",
         "@typescript-eslint/switch-exhaustiveness-check": "error",
         "@typescript-eslint/triple-slash-reference": "error",
-        "@typescript-eslint/unbound-method": "error",
         "@typescript-eslint/unified-signatures": "error",
         "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
         "@typescript-eslint/no-non-null-assertion": "error",
@@ -80,7 +81,6 @@
         "@typescript-eslint/adjacent-overload-signatures": "error",
         "@typescript-eslint/no-dupe-class-members": "error",
         "@typescript-eslint/no-duplicate-imports": "error",
-        "@typescript-eslint/no-unused-expressions": "error",
         "@typescript-eslint/no-implied-eval": "error",
         "@typescript-eslint/no-explicit-any": "warn",
         "@typescript-eslint/space-infix-ops": "warn",
@@ -103,7 +103,6 @@
         "@typescript-eslint/promise-function-async": "warn",
         "@typescript-eslint/type-annotation-spacing": "warn",
         "@typescript-eslint/no-confusing-non-null-assertion": "warn",
-        "@typescript-eslint/no-confusing-void-expression": "warn",
         "@typescript-eslint/explicit-member-accessibility": "warn",
         "@typescript-eslint/method-signature-style": "warn",
         "@typescript-eslint/ban-types": "warn",
@@ -118,6 +117,31 @@
         "@typescript-eslint/padding-line-between-statements": "warn",
         "@typescript-eslint/semi": "warn",
         "@typescript-eslint/space-before-blocks": "warn",
+        "@typescript-eslint/no-unused-expressions": [
+            "error",
+            {
+                "allowTaggedTemplates": true
+            }
+        ],
+        "@typescript-eslint/no-confusing-void-expression": [
+            "warn",
+            {
+                "ignoreVoidOperator": true,
+                "ignoreArrowShorthand": true
+            }
+        ],
+        "@typescript-eslint/unbound-method": [
+            "error",
+            {
+                "ignoreStatic": true
+            }
+        ],
+        "@typescript-eslint/no-misused-promises": [
+            "error",
+            {
+                "checksVoidReturn": false
+            }
+        ],
         // "padded-blocks": [
         //     "warn",
         //     "never",
@@ -171,7 +195,7 @@
         ],
         "function-paren-newline": [
             "warn",
-            "never"
+            "multiline"
         ],
         "generator-star-spacing": [
             "warn",
@@ -257,7 +281,13 @@
         ],
         "operator-linebreak": [
             "warn",
-            "none"
+            "none",
+            {
+                "overrides": {
+                    "?": "ignore",
+                    ":": "ignore"
+                }
+            }
         ],
         "@typescript-eslint/quotes": [
             "warn",
@@ -283,7 +313,7 @@
         ],
         "template-tag-spacing": [
             "warn",
-            "always"
+            "never"
         ],
         "wrap-iife": [
             "warn",
@@ -320,31 +350,125 @@
         ],
         "@typescript-eslint/naming-convention": [
             "error",
-            {
-                "selector": "default",
-                "format": [
-                    "camelCase",
-                    "PascalCase",
-                    "snake_case",
-                    "UPPER_CASE"
-                ],
-                "leadingUnderscore": "allow",
-                "trailingUnderscore": "allow"
-            },
+            // {
+            //     "selector": "default",
+            //     "format": [
+            //         "camelCase",
+            //         "PascalCase",
+            //         "snake_case",
+            //         "UPPER_CASE"
+            //     ],
+            //     "leadingUnderscore": "allow",
+            //     "trailingUnderscore": "allow"
+            // },
             {
                 "selector": "variable",
                 "format": [
                     "strictCamelCase",
                     "UPPER_CASE"
+                ]
+            },
+            {
+                "selector": "function",
+                "format": [
+                    "camelCase",
+                    "PascalCase"
+                ]
+            },
+            {
+                "selector": "parameter",
+                "format": [
+                    "camelCase",
+                    "UPPER_CASE"
                 ],
                 "leadingUnderscore": "allow",
                 "trailingUnderscore": "allow"
             },
             {
-                "selector": "typeLike",
+                "selector": "classProperty",
+                "format": [
+                    "strictCamelCase"
+                ],
+                "leadingUnderscore": "allow",
+                "trailingUnderscore": "allow"
+            },
+            {
+                "selector": "objectLiteralProperty",
+                "format": [
+                    "camelCase",
+                    "snake_case"
+                ]
+            },
+            {
+                "selector": "typeProperty",
+                "format": [
+                    "camelCase",
+                    "snake_case"
+                ]
+            },
+            {
+                "selector": "classMethod",
+                "format": [
+                    "strictCamelCase"
+                ]
+            },
+            {
+                "selector": "objectLiteralMethod",
+                "format": [
+                    "camelCase",
+                    "snake_case"
+                ]
+            },
+            {
+                "selector": "typeMethod",
+                "format": [
+                    "camelCase",
+                    "snake_case"
+                ]
+            },
+            {
+                "selector": "accessor",
+                "format": [
+                    "camelCase"
+                ]
+            },
+            {
+                "selector": "enumMember",
                 "format": [
                     "PascalCase",
                     "UPPER_CASE"
+                ]
+            },
+            {
+                "selector": "class",
+                "format": [
+                    "PascalCase"
+                ]
+            },
+            {
+                "selector": "interface",
+                "format": [
+                    "PascalCase"
+                ]
+            },
+            {
+                "selector": "typeAlias",
+                "format": [
+                    "camelCase",
+                    "PascalCase"
+                ]
+            },
+            {
+                "selector": "enum",
+                "format": [
+                    "PascalCase"
+                ]
+            },
+            {
+                "selector": "typeParameter",
+                "format": [
+                    "camelCase",
+                    "PascalCase"
                 ]
             }
         ],
