--- a/packages/prompt/package.json
+++ b/packages/prompt/package.json
@@ -19,5 +19,8 @@
         "type": "git",
         "url": "https://github.com/Infinite-Fansub/infinite.git"
     },
-    "homepage": "https://github.com/Infinite-Fansub/infinite/tree/main/packages/prompt"
+    "homepage": "https://github.com/Infinite-Fansub/infinite/tree/main/packages/prompt",
+    "dependencies": {
+        "colours.js": "^3.1.2"
+    }
 }
