--- a/packages/nekos-dot-life/package.json
+++ b/packages/nekos-dot-life/package.json
@@ -11,6 +11,7 @@
         "eslint": "eslint",
         "eslint:fix": "eslint --fix",
         "build": "tsc",
+        "build:watch": "tsc --watch",
         "build:test": "tsc --noEmit",
         "node": "node .",
         "tsn": "ts-node src/index.ts"
