--- a/packages/prompt/package.json
+++ b/packages/prompt/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@infinite/prompt",
     "version": "1.0.0",
-    "description": "idk",
+    "description": "Console prompt inspired on the Window.prompt for browsers",
     "author": "Infinite",
     "license": "AGPL-3.0",
     "main": "dist/index.js",
@@ -11,6 +11,7 @@
         "eslint": "eslint",
         "eslint:fix": "eslint --fix",
         "build": "tsc",
+        "build:watch": "tsc --watch",
         "build:test": "tsc --noEmit",
         "node": "node .",
         "tsn": "ts-node src/index.ts"
