--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "ignorePatterns": [
         "*.json",
-        "*.graphql"
+        "*.graphql",
+        "dist/"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
