[UPDATE] Added eslint override for interfaces style

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -161,6 +161,18 @@
                     "delimiter": "comma",
                     "requireLast": false
                 },
+                "overrides": {
+                    "interface": {
+                        "multiline": {
+                            "delimiter": "semi",
+                            "requireLast": true
+                        },
+                        "singleline": {
+                            "delimiter": "semi",
+                            "requireLast": false
+                        }
+                    }
+                },
                 "multilineDetection": "brackets"
             }
         ],
