--- a/packages/prompt/package.json
+++ b/packages/prompt/package.json
@@ -22,6 +22,7 @@
     },
     "homepage": "https://github.com/Infinite-Fansub/infinite/tree/main/packages/prompt",
     "dependencies": {
+        "@infinite/types": "^1.0.0",
         "colours.js": "^3.1.2"
     }
 }
