[UPDATE] Updated packages to be ready to publish

--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "contributors": [
     "DidaS <didasoficial@gmail.com>",
     "ChasJC23 <chas.coxell@gmail.com>",
-    "Niek <Frankenstein795@gmail.com>",
-    "Nightmaretopia",
-    "Aguiar <devaguiar14@gmail.com>"
+    "Niek <frankenstein795@gmail.com>",
+    "Nightmaretopia <ultrania1@hotmail.com>"
   ],
   "repository": {
     "type": "git",
