--- a/packages/discord-client/package.json
+++ b/packages/discord-client/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@infinite/discord-client",
-    "version": "1.0.0",
-    "description": "",
+    "version": "0.6.1",
+    "description": "An open and easy to use discord client",
     "author": "Infinite",
     "license": "AGPL-3.0",
     "main": "dist/index.js",
@@ -26,7 +26,7 @@
         "@discordjs/rest": "^0.4.1",
         "@infinite/logger": "^1.0.0",
         "discord-api-types": "^0.31.2",
-        "discord.js": "^14.0.0-dev.1650672498-3617093",
+        "discord.js": "^14.0.0-dev.1651493371-4ba0f56",
         "mongoose": "^6.3.1",
         "redis": "^4.0.6",
         "redis-om": "^0.2.1"
