--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@infinite/logger",
     "version": "1.0.0",
-    "description": "Infinite main logger",
+    "description": "Infinite logger",
     "author": "Infinite",
     "license": "AGPL-3.0",
     "main": "dist/index.js",
