--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@infinite/types",
     "version": "1.0.0",
-    "description": "",
+    "description": "Custom types",
     "author": "Infinite",
     "license": "AGPL-3.0",
     "main": "dist/index.js",
