--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,35 +1,29 @@
-name: Tests & Build
 
-on: [push, pull_request, workflow_dispatch]
+name: NPM Package
+
+on:
+  workflow_dispatch:
 
 jobs:
-  lint:
-    name: Code lint
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: 18
-      - uses: c-hive/gha-npm-cache@v1
-      - name: Install Dependencies
-        run: |
-          npm i
-          npm i -ws
-      - name: Lint
-        run: npm run eslint:fix
-  build:
-    needs: lint
-    name: Build application on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+      - run: npm ci
+      - run: npm run dev
+
+  publish-npm:
+    needs: build
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: 18
+          registry-url: https://registry.npmjs.org/
       - uses: c-hive/gha-npm-cache@v1
       - name: Install Dependencies
         run: |
@@ -38,4 +32,6 @@ jobs:
       - name: Build the Packages
         run: npm run build -ws
       - name: Test the Packages
-        run: npm run test -ws
+        run: npm publish -ws --access public
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
