--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
           npm i -ws
       - name: Build the Packages
         run: npm run build -ws
-      - name: Test the Packages
+      - name: Publish Packages
         run: npm publish -ws --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM}}
