[UPDATE] `infinite` -> `infinite-fansub`

--- a/packages/fetch/package.json
+++ b/packages/fetch/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@infinite/fetch",
+    "name": "@infinite-fansub/fetch",
     "version": "1.0.0",
     "description": "Node Fetch by infinite",
     "author": "Infinite",
