--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@infinite/logger",
+    "name": "@infinite-fansub/logger",
     "version": "1.0.0",
     "description": "Infinite logger",
     "author": "Infinite",
