--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@infinite/types",
+    "name": "@infinite-fansub/types",
     "version": "1.0.0",
     "description": "Custom types",
     "author": "Infinite",
