--- a/packages/discord-client/package.json
+++ b/packages/discord-client/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@infinite/discord-client",
+    "name": "@infinite-fansub/discord-client",
     "version": "0.6.1",
     "description": "An open and easy to use discord client",
     "author": "Infinite",
