--- a/packages/discord-client/package.json
+++ b/packages/discord-client/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@infinite-fansub/discord-client",
-    "version": "0.6.1",
+    "version": "0.6.2",
     "description": "An open and easy to use discord client",
     "author": "Infinite",
     "license": "AGPL-3.0",
@@ -24,7 +24,7 @@
     "dependencies": {
         "@discordjs/builders": "^0.13.0",
         "@discordjs/rest": "^0.4.1",
-        "@infinite/logger": "^1.0.0",
+        "@infinite-fansub/logger": "^1.0.0",
         "discord-api-types": "^0.31.2",
         "discord.js": "^14.0.0-dev.1651493371-4ba0f56",
         "mongoose": "^6.3.1",
