--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
     "ignorePatterns": [
         "*.json",
         "*.graphql",
-        "dist/"
+        "dist/",
+        "*.js"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
