--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,7 +43,7 @@
         "wrap-regex": "warn",
         // "@typescript-eslint/no-redeclare": "error",
         // "@typescript-eslint/no-magic-numbers": "warn",
-        "@typescript-eslint/init-declarations": "error",
+        "@typescript-eslint/restrict-plus-operands": "error",
         "@typescript-eslint/no-extraneous-class": "error",
         "@typescript-eslint/no-for-in-array": "error",
         "@typescript-eslint/no-invalid-this": "error",
@@ -64,7 +64,6 @@
         // "@typescript-eslint/no-unsafe-member-access": "error",
         "@typescript-eslint/no-unsafe-return": "error",
         "@typescript-eslint/no-useless-constructor": "error",
-        "@typescript-eslint/no-use-before-define": "error",
         "@typescript-eslint/no-var-requires": "error",
         "@typescript-eslint/prefer-for-of": "error",
         "@typescript-eslint/prefer-literal-enum-member": "error",
@@ -89,7 +88,6 @@
         "@typescript-eslint/no-meaningless-void-operator": "warn",
         "@typescript-eslint/no-extra-non-null-assertion": "warn",
         "@typescript-eslint/no-unnecessary-boolean-literal-compare": "warn",
-        "@typescript-eslint/no-unnecessary-condition": "warn",
         "@typescript-eslint/no-unnecessary-qualifier": "warn",
         "@typescript-eslint/no-unnecessary-type-arguments": "warn",
         "@typescript-eslint/no-unnecessary-type-assertion": "warn",
@@ -119,6 +117,12 @@
         "@typescript-eslint/padding-line-between-statements": "warn",
         "@typescript-eslint/semi": "warn",
         "@typescript-eslint/space-before-blocks": "warn",
+        "@typescript-eslint/no-unnecessary-condition": [
+            "warn",
+            {
+                "allowConstantLoopConditions": true
+            }
+        ],
         "@typescript-eslint/no-unused-expressions": [
             "error",
             {
@@ -193,7 +197,7 @@
         ],
         "array-element-newline": [
             "warn",
-            "never"
+            "consistent"
         ],
         "dot-location": [
             "warn",
@@ -517,21 +521,7 @@
                 "ignoreStringArrays": true
             }
         ],
-        "@typescript-eslint/restrict-plus-operands": [
-            "error",
-            {
-                "checkCompoundAssignments": true
-            }
-        ],
-        "@typescript-eslint/restrict-template-expressions": [
-            "error",
-            {
-                "allowNumber": true,
-                "allowBoolean": true,
-                "allowAny": true,
-                "allowNullish": true
-            }
-        ],
+
         "@typescript-eslint/strict-boolean-expressions": [
             "warn",
             {
