--- a/packages/colours-js/package.json
+++ b/packages/colours-js/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "@infinite-fansub/logger",
-    "version": "1.2.0",
-    "description": "Infinite logger",
+    "name": "@infinite-fansub/colours.js",
+    "version": "1.0.0",
+    "description": "System for dealing with colours and ANSI escape sequences in Node.js",
     "author": "Infinite",
     "license": "AGPL-3.0",
     "main": "dist/index.js",
@@ -20,9 +20,5 @@
         "type": "git",
         "url": "https://github.com/Infinite-Fansub/infinite.git"
     },
-    "homepage": "https://github.com/Infinite-Fansub/infinite/tree/main/packages/logger",
-    "dependencies": {
-        "@infinite-fansub/colours.js": "^1.0.0",
-        "colours.js": "^3.1.2"
-    }
+    "homepage": "https://github.com/Infinite-Fansub/infinite/tree/main/packages/colours.js"
 }
