[UPDATE] Fixed issues on windows and added more features

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -273,7 +273,8 @@
             {
                 "overrides": {
                     "while": "any",
-                    "if": "any"
+                    "if": "any",
+                    "else": "any"
                 }
             }
         ],
