--- a/.github/workflows/publish-discord.yml
+++ b/.github/workflows/publish-discord.yml
@@ -1,4 +1,3 @@
-
 name: NPM Package
 
 on:
@@ -19,8 +18,8 @@ jobs:
           npm i
           npm i -ws
       - name: Build the Packages
-        run: npm run build -ws
+        run: npm run build -w @infinite-fansub/discord-client
       - name: Publish Packages
-        run: npm publish -ws --access public
+        run: npm publish -w @infinite-fansub/discord-client --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM}}
