--- a/packages/discord-client/package.json
+++ b/packages/discord-client/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@infinite-fansub/discord-client",
-    "version": "0.9.1",
+    "version": "0.9.2",
     "description": "An open and easy to use discord client",
     "author": "Infinite",
     "license": "AGPL-3.0",
@@ -22,10 +22,8 @@
     },
     "homepage": "https://github.com/Infinite-Fansub/infinite/tree/main/packages/discord-client",
     "dependencies": {
-        "@discordjs/rest": "^1.0.0",
-        "@infinite-fansub/logger": "^1.0.0",
-        "discord-api-types": "^0.36.3",
-        "discord.js": "^14.0.3",
+        "@infinite-fansub/logger": "*",
+        "discord.js": "^14.1.2",
         "mongoose": "^6.3.1",
         "redis": "^4.0.6",
         "redis-om": "^0.3.3"
