--- a/packages/prompt/package.json
+++ b/packages/prompt/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@infinite-fansub/prompt",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "description": "Console prompt inspired on the Window.prompt for browsers",
     "author": "Infinite",
     "license": "AGPL-3.0",
@@ -23,6 +23,7 @@
     "homepage": "https://github.com/Infinite-Fansub/infinite/tree/main/packages/prompt",
     "dependencies": {
         "@infinite-fansub/types": "^1.0.2",
-        "colours.js": "^3.1.2"
+        "colours.js": "^3.1.2",
+        "tslib": "^2.4.0"
     }
 }
