--- a/packages/discord-client/package.json
+++ b/packages/discord-client/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@infinite-fansub/discord-client",
-    "version": "0.9.2",
+    "version": "0.9.3",
     "description": "An open and easy to use discord client",
     "author": "Infinite",
     "license": "AGPL-3.0",
@@ -26,6 +26,7 @@
         "discord.js": "^14.1.2",
         "mongoose": "^6.3.1",
         "redis": "^4.0.6",
-        "redis-om": "^0.3.3"
+        "redis-om": "^0.3.3",
+        "tslib": "^2.4.0"
     }
 }
