--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -300,7 +300,8 @@
             {
                 "overrides": {
                     "?": "ignore",
-                    ":": "ignore"
+                    ":": "ignore",
+                    "||": "before"
                 }
             }
         ],
