[MINOR] New plain print function

--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@infinite-fansub/logger",
-    "version": "1.6.3",
+    "version": "1.6.4",
     "description": "Infinite logger",
     "author": "Infinite",
     "license": "AGPL-3.0",
@@ -10,8 +10,8 @@
         "test": "ts-node tests/index.ts",
         "eslint": "eslint",
         "eslint:fix": "eslint --fix",
-        "build": "tsc",
-        "build:watch": "tsc --watch",
+        "build": "rm -rf dist && tsc",
+        "build:watch": "rm -rf dist && tsc --watch",
         "build:test": "tsc --noEmit",
         "node": "node .",
         "tsn": "ts-node src/index.ts"
