--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -10,8 +10,8 @@
         "test": "ts-node tests/index.ts",
         "eslint": "eslint",
         "eslint:fix": "eslint --fix",
-        "build": "tsc",
-        "build:watch": "tsc --watch",
+        "build": "rm -rf dist && tsc",
+        "build:watch": "rm -rf dist && tsc --watch",
         "build:test": "tsc --noEmit",
         "node": "node .",
         "tsn": "ts-node src/index.ts"
