[REPO] Eslint now ignores doc folders

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,8 @@
         "*.d.ts",
         "*.graphql",
         "dist/",
-        "*.js"
+        "*.js",
+        "docs/"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
